Add introduction section

--- a/Experiment_notebook.ipynb
+++ b/Experiment_notebook.ipynb
@@ -1,5 +1,34 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "db4b2e79",
+   "metadata": {},
+   "source": [
+    "# Improving Long-Range Multimodal Video Storytelling Using Transformer-Based Architectures\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "This project is about generating stories from videos using both images and text. A common method is to use CNN models to extract image features and LSTM models to understand the sequence over time.\n",
+    "\n",
+    "LSTM-based models work well for short videos but face problems when the video is long. Important information from earlier frames can be lost, which results in incomplete or unclear captions.\n",
+    "\n",
+    "To solve this problem, this project uses a Transformer-based model. Transformers use attention to look at all frames together, which helps the model understand long videos and produce more meaningful stories."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88819cfb",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
