Add dataset description

--- a/Experiment_notebook.ipynb
+++ b/Experiment_notebook.ipynb
@@ -22,10 +22,26 @@
    "id": "88819cfb",
    "metadata": {
     "vscode": {
-     "languageId": "plaintext"
+     "languageId": "markdown"
     }
    },
    "outputs": [],
+   "source": [
+    "## Dataset\n",
+    "\n",
+    "This project uses the StoryReasoning Dataset. The dataset contains sequences of images along with their corresponding text descriptions, which together form a visual story.\n",
+    "\n",
+    "Each sequence is treated as a video, and the task is to predict the next part of the story based on previous images and text. To avoid data leakage, the data is split at the video level.\n",
+    "\n",
+    "- Training data: 80%\n",
+    "- Validation data: 10%\n",
+    "- Test data: 10%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28567aa3",
+   "metadata": {},
    "source": []
   }
  ],
