add baseline model description

--- a/Experiment_notebook.ipynb
+++ b/Experiment_notebook.ipynb
@@ -40,6 +40,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37f132f2",
+   "metadata": {},
+   "source": [
+    "## Baseline Model\n",
+    "\n",
+    "The baseline model follows a traditional approach for video storytelling. It uses a CNN model to extract features from each image and an LSTM model to process the sequence over time.\n",
+    "\n",
+    "The CNN helps in understanding the visual content of each frame, while the LSTM captures the order of frames in the video. However, this model has difficulty handling long video sequences, as the LSTM may forget important information from earlier frames."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "28567aa3",
    "metadata": {},
    "source": []
