add Proposed Transformer-Based Model description

--- a/Experiment_notebook.ipynb
+++ b/Experiment_notebook.ipynb
@@ -54,7 +54,15 @@
    "cell_type": "markdown",
    "id": "28567aa3",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Proposed Transformer-Based Model\n",
+    "\n",
+    "To improve performance on long video sequences, this project uses a Transformer-based model instead of an LSTM-based model.\n",
+    "\n",
+    "The Transformer uses an attention mechanism that allows it to focus on all frames in the video at the same time. This helps the model remember important information from earlier frames and understand long-range relationships in the story.\n",
+    "\n",
+    "By using this approach, the model is expected to generate more complete and meaningful captions for long videos."
+   ]
   }
  ],
  "metadata": {
