add Experimental Setup description

--- a/Experiment_notebook.ipynb
+++ b/Experiment_notebook.ipynb
@@ -63,6 +63,20 @@
     "\n",
     "By using this approach, the model is expected to generate more complete and meaningful captions for long videos."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61c5d794",
+   "metadata": {},
+   "source": [
+    "## Experimental Setup\n",
+    "\n",
+    "The performance of the proposed Transformer-based model is compared with the baseline LSTM-based model.\n",
+    "\n",
+    "The dataset is divided into training, validation, and test sets. The training set is used to learn model parameters, the validation set is used to monitor performance during training, and the test set is used for final evaluation.\n",
+    "\n",
+    "To evaluate the models, standard captioning metrics are used along with qualitative analysis to check how well the generated stories make sense over long video sequences."
+   ]
   }
  ],
  "metadata": {
