--- a/Experiment_notebook.ipynb
+++ b/Experiment_notebook.ipynb
@@ -77,11 +77,40 @@
     "\n",
     "To evaluate the models, standard captioning metrics are used along with qualitative analysis to check how well the generated stories make sense over long video sequences."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3819db72",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
